Customer Item List - Allow user to select boxNo from drop down list

--- a/SiqCloset.Web/SiqCloset.Web.csproj
+++ b/SiqCloset.Web/SiqCloset.Web.csproj
@@ -114,6 +114,7 @@
     <Content Include="app\batch\batches.js" />
     <Content Include="app\batch\batchDetails.html" />
     <Content Include="app\batch\batchDetails.js" />
+    <Content Include="app\batch\boxSelTmplDropDown.html" />
     <Content Include="app\batch\custSelTmplTypeAhead.html" />
     <Content Include="app\batch\custSelTmplDropDown.html" />
     <Content Include="app\services\repository.batch.js" />
