--- a/SiqCloset.Web/SiqCloset.Web.csproj
+++ b/SiqCloset.Web/SiqCloset.Web.csproj
@@ -209,6 +209,7 @@
     <Content Include="app\services\repository.abstract.js" />
     <Content Include="Scripts\angular.min.js.map" />
     <Content Include="Scripts\angular-animate.min.js.map" />
+    <Content Include="app\services\repository.box.js" />
     <None Include="Scripts\jquery-2.0.3.intellisense.js" />
     <Content Include="Content\toastr.min.css" />
     <Content Include="Scripts\angular-mocks.js" />
