--- a/SiqCloset.Web/packages.config
+++ b/SiqCloset.Web/packages.config
@@ -16,6 +16,7 @@
   <package id="FontAwesome" version="3.2.1" targetFramework="net45" />
   <package id="HotTowel.Angular" version="2.0.2" targetFramework="net45" />
   <package id="HotTowel.Angular.Breeze" version="2.0.2" targetFramework="net45" />
+  <package id="JasmineTest" version="2.0.0" targetFramework="net45" />
   <package id="jQuery" version="2.0.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.0.0" targetFramework="net45" />
