--- a/SiqCloset.Web/SiqCloset.Web.csproj
+++ b/SiqCloset.Web/SiqCloset.Web.csproj
@@ -545,6 +545,7 @@
     <Content Include="Scripts\xls.js" />
     <Content Include="SpecRunner.html" />
     <Content Include="tests\breezeTests.js" />
+    <Content Include="tests\excelTests.js" />
     <Content Include="tests\tests.js" />
     <Content Include="Web.config" />
     <Content Include="Scripts\jquery-2.0.3.min.map" />
@@ -562,6 +563,7 @@
     <Content Include="Content\font\FontAwesome.otf" />
     <Content Include="packages.config" />
     <Content Include="Scripts\underscore.min.map" />
+    <Content Include="tests\CustomerItemList.xls" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
