--- a/SiqCloset.Web/SiqCloset.Web.csproj
+++ b/SiqCloset.Web/SiqCloset.Web.csproj
@@ -2150,6 +2150,7 @@
     <Content Include="packages.config" />
     <Content Include="Scripts\underscore.min.map" />
     <Content Include="tests\CustomerItemList.xls" />
+    <Content Include="tests\dashboard.specs.js" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
