--- a/SiqCloset.Web/SiqCloset.Web.csproj
+++ b/SiqCloset.Web/SiqCloset.Web.csproj
@@ -187,7 +187,7 @@
     <Content Include="Content\toastr.less" />
     <Content Include="favicon.ico" />
     <Content Include="index.html" />
-    <Content Include="tests\entityManagerFactoryMock.specs.js" />
+    <Content Include="tests\specs\entityManagerFactoryMock.specs.js" />
     <Content Include="tests\karma_config\karma.conf.js" />
     <Content Include="node_modules\karma-chrome-launcher\index.js" />
     <Content Include="node_modules\karma-jasmine\lib\adapter.js" />
@@ -2131,9 +2131,9 @@
     <Content Include="Scripts\underscore.min.js" />
     <Content Include="Scripts\xls.js" />
     <Content Include="SpecRunner.html" />
-    <Content Include="tests\breeze.async.specs.js" />
-    <Content Include="tests\excel.specs.js" />
-    <Content Include="tests\learning.specs.js" />
+    <Content Include="tests\specs\breeze.async.specs.js" />
+    <Content Include="tests\specs\excel.specs.js" />
+    <Content Include="tests\specs\learning.specs.js" />
     <Content Include="tests\support\customerTestData.js" />
     <Content Include="tests\support\testFns.js" />
     <Content Include="Web.config" />
@@ -2154,9 +2154,9 @@
     <Content Include="Content\font\FontAwesome.otf" />
     <Content Include="packages.config" />
     <Content Include="Scripts\underscore.min.map" />
-    <Content Include="tests\CustomerItemList.xls" />
-    <Content Include="tests\dashboard.specs.js" />
-    <Content Include="tests\datacontext.specs.js" />
+    <Content Include="tests\support\CustomerItemList.xls" />
+    <Content Include="tests\specs\dashboard.specs.js" />
+    <Content Include="tests\specs\datacontext.specs.js" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
