--- a/SiqCloset.Web/SiqCloset.Web.csproj
+++ b/SiqCloset.Web/SiqCloset.Web.csproj
@@ -117,6 +117,7 @@
     <Content Include="app\batch\boxSelTmplDropDown.html" />
     <Content Include="app\batch\custSelTmplTypeAhead.html" />
     <Content Include="app\batch\custSelTmplDropDown.html" />
+    <Content Include="app\batch\orderCustomerLookupsBy.js" />
     <Content Include="app\metadata.js" />
     <Content Include="app\services\currencyExchange.js" />
     <Content Include="app\services\repository.batch.js" />
