--- a/SiqCloset.Web/SiqCloset.Web.csproj
+++ b/SiqCloset.Web/SiqCloset.Web.csproj
@@ -192,7 +192,6 @@
     <Content Include="tests\specs\customer.specs.js" />
     <Content Include="tests\specs\customerDetails.specs.js" />
     <Content Include="tests\specs\entityManagerFactoryMock.specs.js" />
-    <Content Include="tests\karma_config\karma.conf.js" />
     <Content Include="node_modules\karma-chrome-launcher\index.js" />
     <Content Include="node_modules\karma-jasmine\lib\adapter.js" />
     <Content Include="node_modules\karma-jasmine\lib\boot.js" />
@@ -1207,7 +1206,6 @@
     <Content Include="Scripts\angular.min.js.map" />
     <Content Include="Scripts\angular-animate.min.js.map" />
     <Content Include="app\services\repository.box.js" />
-    <Content Include="tests\karma_config\test.sh" />
     <Content Include="node_modules\karma-chrome-launcher\LICENSE" />
     <Content Include="node_modules\karma-chrome-launcher\package.json" />
     <Content Include="node_modules\karma-jasmine\LICENSE" />
@@ -1804,7 +1802,8 @@
     <Content Include="node_modules\karma\package.json" />
     <Content Include="node_modules\karma\README.md" />
     <Content Include="node_modules\karma\requirejs.config.tpl.coffee" />
-    <Content Include="RunIISExpress.bat" />
+    <Content Include="launch-webapi.bat" />
+    <Content Include="run-karma.sh" />
     <None Include="Scripts\jquery-2.0.3.intellisense.js" />
     <Content Include="Content\toastr.min.css" />
     <Content Include="Scripts\angular-mocks.js" />
