--- a/SiqCloset.DataAccess/SiqCloset.DataAccess.csproj
+++ b/SiqCloset.DataAccess/SiqCloset.DataAccess.csproj
@@ -58,6 +58,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Helper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SiqClosetDbContext.cs" />
     <Compile Include="SiqClosetRepository.cs" />
