--- a/SiqCloset.Web/packages.config
+++ b/SiqCloset.Web/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Angular.Breeze.StorageWIP" version="1.0.2" targetFramework="net45" />
   <package id="Angular.UI.Bootstrap" version="0.7.0" targetFramework="net45" />
+  <package id="Angular.UI.UI-Router" version="0.2.10" targetFramework="net45" />
   <package id="angularjs" version="1.0.8" targetFramework="net45" />
   <package id="AngularJS.Animate" version="1.2.9" targetFramework="net45" />
   <package id="AngularJS.Core" version="1.2.16" targetFramework="net45" />
